New export functionality